[gd_scene load_steps=7 format=3 uid="uid://doemroqxw6boo"]

[ext_resource type="Script" path="res://Scenes/MainMenu.gd" id="1_lxysf"]
[ext_resource type="Texture2D" uid="uid://dac2b4im7gnb2" path="res://Assets/Main menu/ENSIMAG background.jpg" id="1_ww3wh"]
[ext_resource type="Texture2D" uid="uid://cv4t6tjtpn7et" path="res://Assets/UI/PNG/blue_button00.png" id="2_u4w8e"]
[ext_resource type="Texture2D" uid="uid://d0s4y5uxpn5o1" path="res://Assets/UI/PNG/blue_button05.png" id="3_la3h0"]
[ext_resource type="FontFile" uid="uid://br8yliaheopkv" path="res://Scenes/button_font.tres" id="4_te37i"]
[ext_resource type="AudioStream" uid="uid://ct72hqe116s7n" path="res://Assets/Music/A Hat in Time OST - Title Screen.mp3" id="6_awomm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxysf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 640.0
texture = ExtResource("1_ww3wh")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20
alignment = 1

[node name="Jouer" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("2_u4w8e")
texture_pressed = ExtResource("3_la3h0")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Jouer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_te37i")
theme_override_font_sizes/font_size = 32
text = "Jouer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("2_u4w8e")
texture_pressed = ExtResource("3_la3h0")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_te37i")
theme_override_font_sizes/font_size = 32
text = "Info
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Quiter" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("2_u4w8e")
texture_pressed = ExtResource("3_la3h0")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Quiter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_te37i")
theme_override_font_sizes/font_size = 32
text = "Quitter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(800, 300)
layout_mode = 2
size_flags_horizontal = 8
color = Color(0, 0, 0, 0.556863)

[node name="text" type="Label" parent="MarginContainer/HBoxContainer/ColorRect"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Dans la tranquille ville universitaire de Grenoble, deux écoles prestigieuses, Phelma et Ensimag, coexistent depuis des décennies. Chacune d'entre elles est renommée pour son excellence dans les domaines de l'ingénierie et des sciences appliquées. Cependant, une rivalité féroce couve entre elles, alimentée par des compétitions sportives, académiques et sociales.

L'année dernière, lors des Olympiades annuelles, l'équipe de Phelma a été défaite par Ensimag, déclenchant une humiliation sans précédent. Depuis lors, le ressentiment a monté chez les étudiants de Phelma, qui ne supportent plus les railleries incessantes de leurs rivaux.

Dans un acte de vengeance, Phelma a lancé une attaque surprise contre Ensimag, déterminée à prouver sa supériorité et à remettre en question le statut de son adversaire. Les étudiants d'Ensimag, pris au dépourvu, doivent maintenant défendre leur école bien-aimée contre l'assaut implacable de leurs adversaires.

C'est dans ce contexte que vous, en tant que commandant en chef de la défense d'Ensimag, êtes appelé à l'action. Avec vos compétences stratégiques et votre ingéniosité, vous devez construire des tours de défense, récupérer des ressource via la tour de recyclage, et repousser les assaillants de Phelma pour protéger l'honneur et la réputation de votre école.

Prenez les rênes de la défense, menez vos troupes avec bravoure et montrez à Phelma que la force et la détermination d'Ensimag ne peuvent être ébranlées. La bataille pour la suprématie académique commence maintenant !
"
autowrap_mode = 2

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_awomm")
volume_db = -10.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quiter" to="." method="_on_quiter_pressed"]
